커밋 메시지

--- a/templates/20241024_detail.html
+++ b/templates/20241024_detail.html
@@ -284,7 +284,7 @@
 						</tr>
 						<tr>
 							<td class="td03">경매방식</td>
-							<td class="td04" colspan="3">비공개 동시경매방식(Dutch)</td>
+							<td class="td04" colspan="3">{{ auction_data.auc_type|auc_type }}</td>
 						</tr>
 						<tr>
 							<td class="td03">입찰시간</td>
